# expertise_chats_shared

./: pyproject.toml
expertise_chats/broker/: __init__.py
expertise_chats/broker/domain/: base_event.py  consumer.py  event_handler.py  interaction_event.py  producer.py
expertise_chats/broker/infrastructure/rabbitMq/: connection.py  consumer.py  producer.py
expertise_chats/dependencies/: __init__.py  container.py
expertise_chats/errors/: __init__.py  error_handler.py
expertise_chats/exceptions/: __init__.py
expertise_chats/llm/: __init__.py
expertise_chats/llm/application/services/: prompt_service.py
expertise_chats/llm/application/use_cases/: end_audio_stream.py  handle_chunk.py  search_for_context.py  stream_llm_output.py
expertise_chats/llm/domain/: schemas.py
expertise_chats/llm/domain/repositories/: vector_repository.py
expertise_chats/llm/domain/services/: workflow_service.py
expertise_chats/llm/infrastructure/langchain/: llm_service.py
expertise_chats/llm/infrastructure/openai/: embedding_service.py
expertise_chats/llm/infrastructure/qdrant/: vector_repository.py
expertise_chats/schemas/: __init__,.py  __init__.py  llm.py  ws.py
