[project]
name = "expertise-chats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=1.1.0",
    "pika>=1.3.2",
    "pydantic>=2.12.5",
    "qdrant-client>=1.16.1",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
